[FIX] transaction monitor fix for limited number of parallel readers